--- a/style.css
+++ b/style.css
@@ -32,3 +32,18 @@ html,body{
     background-color: #9999996e;
 
 }
+
+#workingarea{
+    margin: 0 auto;
+    width: 80%;
+    height: 100vh;
+    max-width: 1920px;
+    /* background-color: #888; */
+    border: 1px solid rgb(0, 0, 0);
+
+}
+
+#nav{
+    width: 100%;
+    padding: 20px 0px;
+}
