--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: gilroy;
     box-sizing: border-box;
 }
 
@@ -20,7 +21,7 @@ html,body{
 #back{
     height: 100vh;
     width: 100%;
-    background-color: red;
+    background-color: rgb(0, 0, 0);
 }
 
 #top{
@@ -29,21 +30,117 @@ html,body{
     left: 0;
     height: 100vh;
     width: 100%;
-    background-color: #9999996e;
+    background-color: #0000006e;
 
 }
 
 #workingarea{
+    position: relative;
     margin: 0 auto;
     width: 80%;
     height: 100vh;
     max-width: 1920px;
     /* background-color: #888; */
-    border: 1px solid rgb(0, 0, 0);
+    
 
 }
 
 #nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
-    padding: 20px 0px;
+    padding: 15px 0px;
+}
+
+#nav img{
+    height: 60px;
+}
+
+#nav1, #nav2{
+    display:flex;
+    align-items: center;
+    gap: 50px;
+}
+
+#nav a{
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    color: #fff;
+    font-family: Gilroy;
+}
+
+#hero{
+    margin-top: 2.3vw;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translate(0%, -50%);
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    /* height: 100px; */
+    
+}
+
+#hleft{
+    min-width: 50% ;
+    /* mar;gin-top: 4.5vw */
+    /* height: 100px; */
+    /* background-color: yellow; */
+}
+
+#hleft .elem{
+    height: 9vw;
+    overflow: hidden;
+}
+
+#hleft .elem h1{
+    line-height: 1;
+    font-family: kajiro;
+    font-weight: 100;
+    color: #fff;
+    font-size: 11vw;
+}
+
+#hleft button{
+    margin-top: 2vw;
+    padding: .8vw 3vw;
+    font-size: 3vw;
+    font-family: kajiro;
+
+}
+
+#hright{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    width: 17% ;
+    color:snow;
+    /* margin-top: 4.5vw; */
+    /* height: 100px; */
+    /* background-color: rgb(0, 255, 17); */
+}
+
+#hright p{
+    font-size: 14px;
+    font-weight: 300;
+    text-align: right;
+   
+}
+
+#hright #image{
+    width: 100%;
+    height: 170px;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    background-color: red;
+}
+
+#hright p:nth-child(3){
+    margin-bottom: 80px;
+
 }
