--- a/style.css
+++ b/style.css
@@ -15,13 +15,19 @@ html,body{
 #main{
     height: 100vh;
     width: 100%;
-    background-color: #000;
+    /* background-color: #000; */
 }
 
 #back{
     height: 100vh;
     width: 100%;
-    background-color: rgb(0, 0, 0);
+    /* background-color: rgb(0, 0, 0); */
+}
+
+#back img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 #top{
@@ -31,7 +37,7 @@ html,body{
     left: 0;
     height: 100vh;
     width: 100%;
-    background-color: #0000006e;
+    /* background-color: #0000006e; */
 
 }
 
